# themanager

./: .gitignore  AUTHORS  COPYING  Makefile.am  NEWS  README  configure.ac
src/: Makefile.am  Themanager.c  about.c  database.c  database.h  drawing.c  drawing.h  global.h  main.c
src/http_server/: Makefile.am  html_path_404.c  html_path_dformjs.c  html_path_input_class_info.c  html_path_input_student_info.c  html_path_search.c  html_path_static_file.c  html_path_stulist.c  html_paths.h  http_server.c  sym_404.h
src/http_server/www/: class.html  classnameexist.html  dform.js  foot.html  frame_a.html  frame_empty.html  frame_title.html  index.html  input.html  scan.html  search.html  temp.html
src/misc/: Makefile.am  getmime.c
src/sqlclient/: Makefile.am  gsqlconnect.h  gsqlconnect_sqlite3.c  gsqlresult.c  gsqlresult.h  sqlbackend.c  sqlite_static_template.h
